Тесты + конфиги + рефакторинг